--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,12 @@
             android:text="Venue"
             android:onClick="goToVenue"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Go To Full App"
+            android:onClick="goToLoginCreateAccount"/>
+
 
 
     </LinearLayout>
