--- a/app/src/main/res/layout/activity_login_create_account.xml
+++ b/app/src/main/res/layout/activity_login_create_account.xml
@@ -6,21 +6,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="10dp"
+    android:paddingTop="100dp"
+    android:background="@drawable/bands_near_me_homescreen2"
+
     tools:context="com.example.terry.bandsnearme.LoginCreateAccountActivity">
 
+
+
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Log In"
         android:id="@+id/loginButton"
+        android:layout_margin="10dp"
+        android:background="#c44545"
+
+        android:textSize="40px"
+        android:textColor="@android:color/white"
         android:onClick="goToLoginScreen"/>
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Create Account"
         android:id="@+id/createAccountButton"
+        android:background="#c44545"
+        android:textSize="40px"
+        android:typeface="normal"
+        android:textColor="@android:color/white"
         android:onClick="goToCreateAccount"/>
 
 </LinearLayout>
