--- a/app/src/main/res/layout/activity_individual_user.xml
+++ b/app/src/main/res/layout/activity_individual_user.xml
@@ -5,13 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
     tools:context="com.example.terry.bandsnearme.IndividualUserActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/welcomeText"
+        android:textSize="30sp"
+        android:paddingBottom="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/linearLayout">
+
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,7 +50,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="50dp">
 
         <TextView
             android:id="@+id/searchNotFound"
@@ -88,6 +100,7 @@
         android:text="Bands Near Me"
         android:layout_gravity="center"
         android:id="@+id/bandsNearMeButton"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
