--- a/app/src/main/res/layout/activity_login_create_account.xml
+++ b/app/src/main/res/layout/activity_login_create_account.xml
@@ -20,8 +20,7 @@
         android:id="@+id/loginButton"
         android:layout_margin="10dp"
         android:background="#c44545"
-
-        android:textSize="40px"
+        android:textSize="20dp"
         android:textColor="@android:color/white"
         android:onClick="goToLoginScreen"/>
 
@@ -31,8 +30,7 @@
         android:text="Create Account"
         android:id="@+id/createAccountButton"
         android:background="#c44545"
-        android:textSize="40px"
-        android:typeface="normal"
+        android:textSize="20dp"
         android:textColor="@android:color/white"
         android:onClick="goToCreateAccount"/>
 
