--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#A6A6A6</color>
     <color name="colorAccent">#FF4081</color>
-
-    <color name="black_overlay">#66000000</color>
+    <color name="buttonRed">#CE2828</color>
+    <color name="white">#FFFFFF</color>
+    <color name="darkGrey">#A6A6A6</color>
+    <color name="lightGrey">#EBEBEB</color>
 </resources>
